fix animation - overflow-x:hidden

--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
   width: 100%;
   background-color: var(--clr-black);
+  overflow-x: hidden;
 }
 
 .contacts_background {
