--- a/src/styles/_whatWeDo.scss
+++ b/src/styles/_whatWeDo.scss
@@ -10,7 +10,7 @@
   column-gap: 10px;
   row-gap: 40px;
   background-color: var(--clr-white);
-  overflow: hidden;
+  // overflow: hidden;
 
   &_titleContainer {
     grid-area: title;
